@@ -69,19 +69,15 @@ Features
 Bugs
 ====
 * support InfoZIP encryption header extension (copy data descriptor for encrypted files)
-* embed stripped down old zlib for torrentzip
 ! ensure that nentries is small enough not to cause overflow (size_t for entry, uint64 for CD on disk)
 * Xcode 32bit build uses 64bit config.h
 * fix OpenSUSE i686 regression failures
 * fix open_filename_duplicate_consistency.test to fail
-* split zip archive torrentzip state from user requested torrentzip state
 * check for limits imposed by format (central dir size, file size, extra fields, ...)
 * _zip_u2d_time: handle localtime(3) failure
 * POSIX: zip_open: check whether file can be created and fail if not
 * fix inconsistent usage of valid flags (not checked in many places)
 * cdr == NULL -> ER_NOENT vs. idx > cdir->nentry -> ER_INVAL inconsistent (still there?)
-* torrentzip broken on NetBSD/amd64 6.99
-* torrentzip: check behaviour of files with empty name (size 0; file size > 0)
 
 Cleanup
 =======
