@@ -29,7 +29,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd January 29, 2014
+.Dd April 29, 2015
 .Dt ZIPCMP 1
 .Os
 .Sh NAME
@@ -78,7 +78,6 @@ exits 0 if the two archives contain the same files, 1 if they differ,
 and \*[Gt]1 if an error occurred.
 .Sh SEE ALSO
 .Xr zipmerge 1 ,
-.Xr ziptorrent 1 ,
 .Xr libzip 3
 .Sh AUTHORS
 .An -nosplit
