@@ -29,7 +29,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd June 4, 2008
+.Dd April 29, 2015
 .Dt ZIPMERGE 1
 .Os
 .Sh NAME
@@ -77,7 +77,6 @@ Display version information and exit.
 exits 0 on success and \*[Gt]1 if an error occurred.
 .Sh SEE ALSO
 .Xr zipcmp 1 ,
-.Xr ziptorrent 1 ,
 .Xr libzip 3
 .Sh AUTHORS
 .An -nosplit
